# clawdesk1o

./: .gitignore  CLAWDESK-REAL.md  LICENSE  README.md  build-mac-fixed-v2.sh  build-mac-fixed.sh  build-mac.sh  clawdesk-simple.js  debug-app.sh  debug-electron.sh  debug-real-app.sh  electron-fixed.js  emergency-test.html  fix-all.sh  fix-axios.sh  fix-download.sh  index.html  install-native.sh  install-real.sh  install-simple.sh  main-agent.js  main-debug.js  main-fixed.js  main-intelligent.js  main-minimal.js  main-real-complete.js  main-real.js  main-simulated.js  main.js  package-lock.json  package.json  preload-agent.js  preload-minimal.js  preload-real.js  preload.js  rebuild-agent.sh  rebuild-intelligent.sh  rebuild-real.sh  recover.sh  run-direct.sh  (+18 more)
.github/workflows/: build-debug.yml  build-final.yml  build-macos-minimal.yml  build-macos-simple.yml  build-macos-working.yml  build-macos.yml  build.yml  electron-build.yml  fixed-tauri2.yml  manual-debug.yml  show-error.yml  simple-electron.yml  tauri2-macos.yml  test-frontend-only.yml  test-npm-only.yml  test-tauri.yml
src/: App-simple.tsx  App.tsx  agent.js  brain.js  control.js  index.css  vision.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 128x128@2x.png.base64  32x32.png.base64  README.txt  generate_icons.sh  icon.icns
src-tauri/src/: main-simple.rs  main.rs
src/components/: ActionLog.tsx  ChatInterface.tsx  ConfigPanel.tsx  FirstRunWizard.tsx  SafeModePanel.tsx  ScreenGuideOverlay.tsx
src/lib/: config.ts  store.ts
