[package]
name = "clawdesk-ultimate"
version = "1.0.0"
description = "AI Desktop Assistant with Local Vision & Safe Mode"
authors = ["Mohammed"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
base64 = "0.21"

[features]
custom-protocol = ["tauri/custom-protocol"]
