[package]
name = "clawdesk"
version = "1.0.0"
description = "CLAWDESK Ultimate - AI Desktop Assistant"
authors = ["Mohammed"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]