[package]
name = "clawdesk"
version = "1.0.0"
description = "CLAWDESK Ultimate - AI Desktop Assistant"
authors = ["Mohammed"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]